force-app/main/default/objects/Staged_Program__c/Staged_Program__c.object-meta.xml
<CustomObject>
    <description>Represents the variable details needed for an individual program offering in Traction Rec</description>
    <label>Staged Program</label>
    <nameField>
        <displayFormat>SP-{00000}</displayFormat>
        <label>Staged Program Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staged Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>