force-app/main/default/objects/Staged_Program__c/fields/Anonymous_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Anonymous_Ticket__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the created course option will be an anonymous ticket course option</description>
    <inlineHelpText>If checked, the created course option will be an anonymous ticket course option</inlineHelpText>
    <label>Anonymous Ticket</label>
    <type>Checkbox</type>
</CustomField>