force-app/main/default/objects/Staged_Program__c/fields/Available_Online__c.field-meta.xml
<CustomField>
    <fullName>Available_Online__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the program will be available for registration online</description>
    <inlineHelpText>If checked, the program will be available for registration online</inlineHelpText>
    <label>Available Online</label>
    <type>Checkbox</type>
</CustomField>