force-app/main/default/objects/Staged_Program__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course</label>
    <referenceTo>TREX1__Course__c</referenceTo>
    <relationshipLabel>Staged Programs</relationshipLabel>
    <relationshipName>Staged_Programs</relationshipName>
    <type>Lookup</type>
</CustomField>