force-app/main/default/objects/Staged_Program__c/fields/Course_Option__c.field-meta.xml
<CustomField>
    <fullName>Course_Option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course Option</label>
    <referenceTo>TREX1__Course_Option__c</referenceTo>
    <relationshipLabel>Staged Programs</relationshipLabel>
    <relationshipName>Staged_Programs</relationshipName>
    <type>Lookup</type>
</CustomField>