force-app/main/default/objects/Staged_Program__c/fields/Course_Option_Code__c.field-meta.xml
<CustomField>
    <fullName>Course_Option_Code__c</fullName>
    <label>Course Option Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>