force-app/main/default/objects/Staged_Program__c/fields/Course_Option_Name__c.field-meta.xml
<CustomField>
    <fullName>Course_Option_Name__c</fullName>
    <label>Course Option Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>