force-app/main/default/objects/Staged_Program__c/fields/Course_Session_Key__c.field-meta.xml
<CustomField>
    <fullName>Course_Session_Key__c</fullName>
    <formula>Course_Session_Name__c &amp; &quot;-&quot; &amp; CASESAFEID( Course__c ) &amp; &quot;-&quot; &amp; CASESAFEID( Session__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Session Key</label>
    <type>Text</type>
</CustomField>