force-app/main/default/objects/Staged_Program__c/fields/Exception_Dates__c.field-meta.xml
<CustomField>
    <fullName>Exception_Dates__c</fullName>
    <description>A semi-colon separated list of dates (M/d/yyyy)</description>
    <inlineHelpText>A semi-colon separated list of dates (M/d/yyyy)</inlineHelpText>
    <label>Exception Dates</label>
    <length>255</length>
    <type>Text</type>
</CustomField>