force-app/main/default/objects/Staged_Program__c/fields/Free_Program__c.field-meta.xml
<CustomField>
    <fullName>Free_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the generic Free Registration Product is assigned to the generated course option</description>
    <inlineHelpText>If checked, the generic Free Registration Product is assigned to the generated course option</inlineHelpText>
    <label>Free Program</label>
    <type>Checkbox</type>
</CustomField>