force-app/main/default/objects/Staged_Program__c/fields/GL_Account__c.field-meta.xml
<CustomField>
    <fullName>GL_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GL Account</label>
    <referenceTo>TREX1__GL_Account__c</referenceTo>
    <relationshipLabel>Staged Programs</relationshipLabel>
    <relationshipName>Staged_Programs</relationshipName>
    <type>Lookup</type>
</CustomField>