force-app/main/default/objects/Staged_Program__c/fields/GL_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>GL_Account_Number__c</fullName>
    <label>GL Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>