force-app/main/default/objects/Staged_Program__c/fields/Has_Member_Price__c.field-meta.xml
<CustomField>
    <fullName>Has_Member_Price__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, a member price level will be generated for the course option product</description>
    <inlineHelpText>If checked, a member price level will be generated for the course option product</inlineHelpText>
    <label>Has Member Price</label>
    <type>Checkbox</type>
</CustomField>