force-app/main/default/objects/Staged_Program__c/fields/Has_Multiple_Start_Times__c.field-meta.xml
<CustomField>
    <fullName>Has_Multiple_Start_Times__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, bookings will be created based on related Staged Program Bookings</description>
    <inlineHelpText>If checked, bookings will be created based on related Staged Program Bookings</inlineHelpText>
    <label>Has Multiple Start Times</label>
    <type>Checkbox</type>
</CustomField>