force-app/main/default/objects/Staged_Program__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>TREX1__Location__c</referenceTo>
    <relationshipLabel>Staged Programs</relationshipLabel>
    <relationshipName>Staged_Programs</relationshipName>
    <type>Lookup</type>
</CustomField>