force-app/main/default/objects/Staged_Program__c/fields/Maximum_Age__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Age__c</fullName>
    <label>Maximum Age</label>
    <precision>12</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>