force-app/main/default/objects/Staged_Program__c/fields/Member_Price__c.field-meta.xml
<CustomField>
    <fullName>Member_Price__c</fullName>
    <description>15% of public price</description>
    <formula>IF( Has_Member_Price__c, (Public_Price__c * 0.85), Public_Price__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>15% of public price</inlineHelpText>
    <label>Member Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>