force-app/main/default/objects/Staged_Program__c/fields/Minimum_Age__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Age__c</fullName>
    <label>Minimum Age</label>
    <precision>12</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>