force-app/main/default/objects/Staged_Program__c/fields/Minimum_Participants__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Participants__c</fullName>
    <label>Minimum Participants</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>