force-app/main/default/objects/Staged_Program__c/fields/Number_of_Classes__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Classes__c</fullName>
    <description>This field is used to help calculate the Public Price. It is not used during the program generation process.</description>
    <inlineHelpText>This field is used to help calculate the Public Price. It is not used during the program generation process.</inlineHelpText>
    <label>Number of Classes</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>