force-app/main/default/objects/Staged_Program__c/fields/Number_of_Staged_Program_Bookings__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Staged_Program_Bookings__c</fullName>
    <label>Number of Staged Program Bookings</label>
    <summaryForeignKey>Staged_Program_Booking__c.Staged_Program__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>