force-app/main/default/objects/Staged_Program__c/fields/Price_Level_Key__c.field-meta.xml
<CustomField>
    <fullName>Price_Level_Key__c</fullName>
    <formula>&quot;Public-&quot; &amp; TEXT( Public_Price__c ) &amp; &quot;-&quot; &amp; GL_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Level Key</label>
    <type>Text</type>
</CustomField>