force-app/main/default/objects/Staged_Program__c/fields/Primary_Facility__c.field-meta.xml
<CustomField>
    <fullName>Primary_Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Facility</label>
    <referenceTo>TREX1__Facility__c</referenceTo>
    <relationshipLabel>Staged Programs</relationshipLabel>
    <relationshipName>Staged_Programs</relationshipName>
    <type>Lookup</type>
</CustomField>