force-app/main/default/objects/Staged_Program__c/fields/Primary_Facility_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Facility_Name__c</fullName>
    <label>Primary Facility Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>