force-app/main/default/objects/Staged_Program__c/fields/Public_Price__c.field-meta.xml
<CustomField>
    <fullName>Public_Price__c</fullName>
    <label>Public Price</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>