force-app/main/default/objects/Staged_Program__c/fields/Public_Price_per_Class__c.field-meta.xml
<CustomField>
    <fullName>Public_Price_per_Class__c</fullName>
    <label>Public Price per Class</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>