force-app/main/default/objects/Staged_Program__c/fields/Source_Course_Session_Option__c.field-meta.xml
<CustomField>
    <fullName>Source_Course_Session_Option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If created during an import of past programs, the course session option that this staged program was created from</description>
    <inlineHelpText>If created during an import of past programs, the course session option that this staged program was created from</inlineHelpText>
    <label>Source Course Session Option</label>
    <referenceTo>TREX1__Course_Session_Option__c</referenceTo>
    <relationshipLabel>Generated Staged Programs</relationshipLabel>
    <relationshipName>Generated_Staged_Programs</relationshipName>
    <type>Lookup</type>
</CustomField>