force-app/main/default/objects/Staged_Program__c/fields/Staged_Program_Batch__c.field-meta.xml
<CustomField>
    <fullName>Staged_Program_Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Staged Program Batch</label>
    <referenceTo>Staged_Program_Batch__c</referenceTo>
    <relationshipLabel>Staged Programs</relationshipLabel>
    <relationshipName>Staged_Programs</relationshipName>
    <type>Lookup</type>
</CustomField>