force-app/main/default/objects/Staged_Program__c/fields/Waive_Initial_Fee__c.field-meta.xml
<CustomField>
    <fullName>Waive_Initial_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the default administrative fee will not be charged for create price levels</description>
    <inlineHelpText>If checked, the default administrative fee will not be charged for create price levels</inlineHelpText>
    <label>Waive Initial Fee</label>
    <type>Checkbox</type>
</CustomField>