force-app/main/default/objects/Staged_Program__c/validationRules/CourseMustBeInProgram.validationRule-meta.xml
<ValidationRule>
    <fullName>CourseMustBeInProgram</fullName>
    <active>true</active>
    <description>Ensures that the associated program is a parent of the associated course</description>
    <errorConditionFormula>AND(
  !ISBLANK( Program__c ),
  !ISBLANK( Course__c ),
  Course__r.TREX1__Program__c &lt;&gt; Program__c
)</errorConditionFormula>
    <errorDisplayField>Course__c</errorDisplayField>
    <errorMessage>The course must be a child of the associated program</errorMessage>
</ValidationRule>