force-app/main/default/objects/Staged_Program__c/validationRules/EndTimeValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>EndTimeValidation</fullName>
    <active>true</active>
    <description>Checks that time is formatted HH:MM</description>
    <errorConditionFormula>IF(
  !ISBLANK(End_Time__c),
  NOT(REGEX( End_Time__c  , &quot;(0?[1-9]|1[012])(:[0-5]\\d)\\s[APap][mM]$&quot;)),
  FALSE
)</errorConditionFormula>
    <errorDisplayField>End_Time__c</errorDisplayField>
    <errorMessage>Time should be entered as HH:MM AM/PM</errorMessage>
</ValidationRule>