force-app/main/default/objects/Staged_Program__c/validationRules/FacilityLocationMustMatchLocation.validationRule-meta.xml
<ValidationRule>
    <fullName>FacilityLocationMustMatchLocation</fullName>
    <active>true</active>
    <description>The primary facility must be within the defined location</description>
    <errorConditionFormula>AND(
  !ISBLANK( Primary_Facility__c ),
  !ISBLANK( Location__c ),
  Primary_Facility__r.TREX1__Location__c  &lt;&gt;  Location__c
)</errorConditionFormula>
    <errorDisplayField>Primary_Facility__c</errorDisplayField>
    <errorMessage>The primary facility must be within the defined location</errorMessage>
</ValidationRule>