force-app/main/default/objects/Staged_Program__c/validationRules/LocationMustMatchAccountingVariable.validationRule-meta.xml
<ValidationRule>
    <fullName>LocationMustMatchAccountingVariable</fullName>
    <active>true</active>
    <description>The Location must match the location variable in the GL Code.</description>
    <errorConditionFormula>AND(
 ISPICKVAL( Status__c, &quot;Staged&quot; ),
 !ISBLANK( Location__c ),
 !ISBLANK( Location__r.GLVLocation__c ),
 Location__r.GLVLocation__r.GL_Code__c &lt;&gt; MID( GL_Account__r.TREX1__GL_Account_Number__c, 4, 2) 
)</errorConditionFormula>
    <errorDisplayField>Location__c</errorDisplayField>
    <errorMessage>The Location must match the location variable in the GL Code.</errorMessage>
</ValidationRule>