force-app/main/default/objects/Staged_Program__c/validationRules/NoDoubleSpacesInCourseOptionName.validationRule-meta.xml
<ValidationRule>
    <fullName>NoDoubleSpacesInCourseOptionName</fullName>
    <active>true</active>
    <description>Remove any double spaces from the course option name</description>
    <errorConditionFormula>CONTAINS( Course_Option_Name__c, &quot;  &quot; )</errorConditionFormula>
    <errorDisplayField>Course_Option_Name__c</errorDisplayField>
    <errorMessage>Remove any double spaces from the course option name</errorMessage>
</ValidationRule>