force-app/main/default/objects/Staged_Program__c/validationRules/NoDoubleSpacesInCourseSessionName.validationRule-meta.xml
<ValidationRule>
    <fullName>NoDoubleSpacesInCourseSessionName</fullName>
    <active>true</active>
    <description>Remove any double spaces from the course session name</description>
    <errorConditionFormula>CONTAINS( Course_Session_Name__c, &quot;  &quot; )</errorConditionFormula>
    <errorDisplayField>Course_Session_Name__c</errorDisplayField>
    <errorMessage>Remove any double spaces from the course session name</errorMessage>
</ValidationRule>