force-app/main/default/objects/Staged_Program__c/validationRules/StagedMultiTimeMustHaveBookings.validationRule-meta.xml
<ValidationRule>
    <fullName>StagedMultiTimeMustHaveBookings</fullName>
    <active>true</active>
    <description>Staged programs that have multiple start times must have at least one staged program booking</description>
    <errorConditionFormula>AND(
  ISPICKVAL( Status__c, &quot;Staged&quot; ),
  Number_of_Staged_Program_Bookings__c == 0
)</errorConditionFormula>
    <errorDisplayField>Has_Multiple_Start_Times__c</errorDisplayField>
    <errorMessage>Staged programs that have multiple start times must have at least one staged program booking</errorMessage>
</ValidationRule>