force-app/main/default/objects/Staged_Program__c/validationRules/StagedMustHaveACourse.validationRule-meta.xml
<ValidationRule>
    <fullName>StagedMustHaveACourse</fullName>
    <active>true</active>
    <description>Staged programs must have a course</description>
    <errorConditionFormula>AND(
  ISPICKVAL( Status__c, &quot;Staged&quot; ),
  ISBLANK( Course__c )
)</errorConditionFormula>
    <errorDisplayField>Course__c</errorDisplayField>
    <errorMessage>Staged programs must have a course</errorMessage>
</ValidationRule>