force-app/main/default/objects/Staged_Program__c/validationRules/StagedMustHaveACourseOptionName.validationRule-meta.xml
<ValidationRule>
    <fullName>StagedMustHaveACourseOptionName</fullName>
    <active>true</active>
    <description>Staged programs must have a course option name</description>
    <errorConditionFormula>AND(
  ISPICKVAL( Status__c, &quot;Staged&quot; ),
  ISBLANK( Course_Option_Name__c )
)</errorConditionFormula>
    <errorDisplayField>Course_Option_Name__c</errorDisplayField>
    <errorMessage>Staged programs must have a course option name</errorMessage>
</ValidationRule>