force-app/main/default/objects/Staged_Program__c/validationRules/StagedMustHaveACourseSessionName.validationRule-meta.xml
<ValidationRule>
    <fullName>StagedMustHaveACourseSessionName</fullName>
    <active>true</active>
    <description>Staged programs must have a course session name</description>
    <errorConditionFormula>AND(
  ISPICKVAL( Status__c, &quot;Staged&quot; ),
  ISBLANK( Course_Session_Name__c )
)</errorConditionFormula>
    <errorDisplayField>Course_Session_Name__c</errorDisplayField>
    <errorMessage>Staged programs must have a course session name</errorMessage>
</ValidationRule>