force-app/main/default/objects/Staged_Program__c/validationRules/StagedMustHaveAProgram.validationRule-meta.xml
<ValidationRule>
    <fullName>StagedMustHaveAProgram</fullName>
    <active>true</active>
    <description>Staged programs must have a program defined</description>
    <errorConditionFormula>AND(
  ISPICKVAL( Status__c, &quot;Staged&quot; ),
  ISBLANK( Program__c )
)</errorConditionFormula>
    <errorDisplayField>Program__c</errorDisplayField>
    <errorMessage>Staged programs must have a program defined</errorMessage>
</ValidationRule>