force-app/main/default/objects/Staged_Program__c/validationRules/StagedMustHaveASession.validationRule-meta.xml
<ValidationRule>
    <fullName>StagedMustHaveASession</fullName>
    <active>true</active>
    <description>Staged programs must have a session</description>
    <errorConditionFormula>AND(
  ISPICKVAL( Status__c, &quot;Staged&quot; ),
  ISBLANK( Session__c )
)</errorConditionFormula>
    <errorDisplayField>Session__c</errorDisplayField>
    <errorMessage>Staged programs must have a session</errorMessage>
</ValidationRule>