force-app/main/default/objects/Staged_Program__c/validationRules/StagedNonFreeMustHaveGLAccount.validationRule-meta.xml
<ValidationRule>
    <fullName>StagedNonFreeMustHaveGLAccount</fullName>
    <active>true</active>
    <description>Staged programs that are not free must have a GL account</description>
    <errorConditionFormula>AND(
  ISPICKVAL( Status__c, &quot;Staged&quot; ),
  !Free_Program__c,
  ISBLANK( GL_Account__c )
)</errorConditionFormula>
    <errorDisplayField>GL_Account__c</errorDisplayField>
    <errorMessage>Staged programs that are not free must have a GL account</errorMessage>
</ValidationRule>