force-app/main/default/objects/Staged_Program__c/validationRules/StagedNonFreeMustHavePrice.validationRule-meta.xml
<ValidationRule>
    <fullName>StagedNonFreeMustHavePrice</fullName>
    <active>true</active>
    <description>Staged programs that are not free must have a public price</description>
    <errorConditionFormula>AND(
  ISPICKVAL( Status__c, &quot;Staged&quot; ),
  !Free_Program__c,
  ISBLANK( Public_Price__c )
)</errorConditionFormula>
    <errorDisplayField>Public_Price__c</errorDisplayField>
    <errorMessage>Staged programs that are not free must have a public price</errorMessage>
</ValidationRule>