force-app/main/default/objects/Staged_Program__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Course__c</columns>
    <columns>Status__c</columns>
    <columns>Program__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Start_Time__c</columns>
    <columns>End_Date__c</columns>
    <columns>End_Time__c</columns>
    <columns>Session__c</columns>
    <columns>Course_Option__c</columns>
    <columns>Course_Session__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>