force-app/main/default/objects/Staged_Program__c/listViews/Draft_Program_Review.listView-meta.xml
<ListView>
    <fullName>Draft_Program_Review</fullName>
    <columns>Status__c</columns>
    <columns>NAME</columns>
    <columns>Course_Option_Name__c</columns>
    <columns>Course_Session_Name__c</columns>
    <columns>Days_of_Week__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Start_Time__c</columns>
    <columns>End_Time__c</columns>
    <columns>Public_Price__c</columns>
    <columns>Member_Price__c</columns>
    <columns>Primary_Facility__c</columns>
    <columns>GL_Account__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Staged_Program_Batch__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Draft</value>
    </filters>
    <filters>
        <field>Staged_Program_Batch__c</field>
        <operation>equals</operation>
        <value>SPB-00066</value>
    </filters>
    <label>Draft Program Review</label>
</ListView>