force-app/main/default/objects/Staged_Program__c/listViews/Processed_Programs.listView-meta.xml
<ListView>
    <fullName>Processed_Programs</fullName>
    <columns>NAME</columns>
    <columns>Course_Option__c</columns>
    <columns>Course_Session__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Processed</value>
    </filters>
    <label>Processed Programs</label>
</ListView>