force-app/main/default/objects/Staged_Program__c/listViews/Sample_Listview_for_Cloning.listView-meta.xml
<ListView>
    <fullName>Sample_Listview_for_Cloning</fullName>
    <columns>Status__c</columns>
    <columns>NAME</columns>
    <columns>Course_Option_Name__c</columns>
    <columns>Days_of_Week__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Course__c</columns>
    <columns>Course_Name__c</columns>
    <columns>Course_Option__c</columns>
    <columns>Course_Session__c</columns>
    <columns>End_Date__c</columns>
    <columns>Session__c</columns>
    <columns>Session_Name__c</columns>
    <columns>GL_Account__c</columns>
    <columns>GL_Account_Number__c</columns>
    <columns>Available_Online__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>Lauren Madden</value>
    </filters>
    <label>Sample Listview for Cloning</label>
</ListView>