force-app/main/default/objects/Staged_Program__c/listViews/Staged_Programs.listView-meta.xml
<ListView>
    <fullName>Staged_Programs</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Program__c</columns>
    <columns>Course__c</columns>
    <columns>Session_Name__c</columns>
    <columns>Session__c</columns>
    <columns>Course_Option_Name__c</columns>
    <columns>Course_Session_Name__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Start_Time__c</columns>
    <columns>End_Time__c</columns>
    <columns>Public_Price__c</columns>
    <columns>GL_Account__c</columns>
    <columns>Location__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Draft,Staged</value>
    </filters>
    <label>Staged Programs</label>
</ListView>